--- a/meeting/20161125-f2ergba.md
+++ b/meeting/20161125-f2ergba.md
@@ -17,13 +17,13 @@
 
 ### 微型互動設計：使用動畫塑造良好體驗
 
-* 作者：胡豫
+* 講者：胡豫
 
-```
+    ```
 Taylor 是經驗豐富的 UI 及產品設計師，專精於 iOS、Android 及 Web 等平台，
 前後曾經在國內外許多新創公司從事 UX 以及 UI 設計，也在各種組織、公司、學校裡協助管理與培訓，
 及擔任講師，目前開設了自有的工作室及設計課程，致力於將設計觀念變得更易觸及、理解
-```
+    ```
 
 * 簡介：介面中的動畫，除了賦予靜態的視覺設計靈魂外，還有著更為重要的目的，本次分享將討論如何從互動設計的宏觀角度來分析動畫的構成與意義
 * 你所習慣的世界充滿熟悉感，安全感，但每個人所理解的世界不同，UI 的工作是要傳達可理解、可預測的設計給每位使用者
@@ -83,15 +83,15 @@ Taylor 是經驗豐富的 UI 及產品設計師，專精於 iOS、Android 及 We
 
 ***
 
-### 大熊
+### UI Kit 的設計與應用
 
-* 講題：UI Kit 的設計與應用
+* 講者：大熊
 * 簡報連結：http://www.slideshare.net/desbearli/vital-ui-kit
 * 簡介：UI Kit 在產品的介面設計中，扮演整合元件、統一使用情境、規範風格樣式的角色，同時讓UI設計、前端與後端人員有更具體與規格化的參照標準。這些好處...我們都能理解，但在實作上，還有什麼問題可能會需要面對呢？這一次透過今年團隊UI kit的開發與實際應用來做一些分享。
 
 ***
 
-2015年公司企業識別規劃重新設計，介紹公司設計的介面：
+2015年底公司識別形象開始重新設計，介紹公司設計的介面：
 
 * General Ledger 會計系統
 * FormDoc
@@ -143,9 +143,10 @@ how to start?
 
 設計 PM 客戶 ，但由長官決定 ＱＱ
 
-* 告訴客戶，主角是誰，主角是使用者，不是長官
-* 告訴客戶，相信我們
-* 告訴客戶，我們是同一國
+* Design Kickoff
+  * 告訴客戶，主角是誰，主角是使用者，不是長官
+  * 告訴客戶，相信我們
+  * 告訴客戶，我們是同一國
 
 * 介紹設計趨勢
 * 分析案例，從全世界找案例，例如：各國總統府網站案例
@@ -155,10 +156,8 @@ how to start?
 
 #### 相關連結
 
-FED
-https://dribbble.com/gss
-uwillx
-https://www.instagram.com/uwillx/
+* https://dribbble.com/gss
+* https://www.instagram.com/uwillx/
 
 
 ***
